editor-components/call_to_action/call_to_action21/call_to_action21.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {

    .max-content {
        display: flex;
        justify-content: center;
        align-items: center;

        .card {
            width: 100%;
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            padding: 0;

            .card-content {
                display: flex;
                flex-direction: column;
                align-items: center;
                width: 100%;

                .title,
                .subtitle,
                .description {
                    text-align: center;
                    width: 100%;
                }

                .subtitle {
                    width: fit-content;
                    padding: 0 var(--composer-gap-md);
                    transform: none;

                    &::before {
                        display: none;
                    }
                }

                .description {
                    padding: 0 var(--composer-gap-md);
                }

                .button-container {
                    display: flex;
                    flex-wrap: wrap;
                    justify-content: center;

                    .button {
                        .button-text {
                            content: "";
                        }
                    }
                }
            }

            &.has-background {
                background: var(--composer-primary-color);
                border-radius: var(--composer-border-radius-md);
                padding: var(--composer-gap-xl);

                .card-content {

                    .title,
                    .subtitle,
                    .description {
                        color: var(--composer-font-color-secondary);
                    }

                    .subtitle {
                        background: transparent !important;
                        padding: 0 var(--composer-gap-md) !important;
                        border: none !important;
                        border-radius: 0 !important;
                    }
                }
            }
        }
    }
}

@container (max-width: #{$composer-tablet-width}) {
    .container .max-content .card .card-content .button-container .button {
        width: 100%;
    }
}

@container (max-width: #{$composer-phone-width}) {
    .container .max-content .card.has-background {
        padding: var(--composer-gap-lg);
    }
}

