fix: restore gap between multiple buttons CTA21

--- a/editor-components/call_to_action/call_to_action21/call_to_action21.module.scss
+++ b/editor-components/call_to_action/call_to_action21/call_to_action21.module.scss
@@ -46,6 +46,7 @@
                     display: flex;
                     flex-wrap: wrap;
                     justify-content: center;
+                    gap: var(--composer-gap-sm);
 
                     .button {
                         .button-text {
